--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,21 @@ body {
 
 /* ======================== Start Global Classes ======================== */
 
+
+/* Global classes are used to reuse property values */
+
 a {
     text-decoration: none;
+}
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+ul {
+    list-style-type: none;
 }
 
 
@@ -26,9 +39,29 @@ a {
     overflow: hidden;
 }
 
+.nav .nav-menu {
+    justify-content: space-between;
+}
+
+.nav .nav-items {
+    display: flex;
+    margin: 0;
+}
+
+.nav .nav-items .nav-link {
+    padding: 1.6rem 1rem;
+    font-size: 1.1rem;
+    position: relative;
+}
+
 .nav .nav-brand a {
     font-size: 1.6rem;
     padding: 1rem 0;
+    display: block;
+}
+
+.nav .social {
+    padding: 1.4rem 0;
 }
 
 
