--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     --stil-grain: #F5CB5C;
     --raisin-black: #242423;
     --jet: #333533;
-    --gradient-color: linear-gradient(to right, #d7d2cc 0%, #304352 100%);
+    --gradient-color: linear-gradient(to right, #d7d2cc 0%, rgb(39, 95, 76) 100%);
     /* Fonts */
     --Abel: 'Abel', cursive;
     --Anton: 'Anton', cursive;
@@ -41,6 +41,29 @@ a {
 
 ul {
     list-style-type: none;
+}
+
+h1 {
+    font-family: var(--Baloo);
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-family: var(--K2D);
+}
+
+h3 {
+    font-family: var(--Abel);
+    font-size: 1.3rem;
+}
+
+button.btn {
+    border: none;
+    border-radius: 2rem;
+    padding: 1rem 3rem;
+    cursor: pointer;
+    font-size: 1rem;
+    font-family: var(--OpenSans);
 }
 
 
@@ -129,6 +152,48 @@ ul {
 
 
 /* ========================== End Navbar ===========================*/
+
+
+/* ======================== Main Content ===========================*/
+
+main .site-title .site-background {
+    padding-top: 10rem;
+    text-align: center;
+    color: white;
+}
+
+main .site-title h1,
+h3 {
+    margin: 3rem;
+}
+
+main .site-title .btn {
+    margin: 1.8rem;
+    background: var(--gradient-color);
+}
+
+main .site-title .btn:hover {
+    background: rgba(0, 0, 0, .2);
+    color: white;
+    border: 1px solid #fff;
+}
+
+
+/* ======================== Site Title ===========================*/
+
+main .site-title {
+    background: url(../assets/Background-image.png);
+    background-size: cover;
+    height: 110vh;
+    display: flex;
+    justify-content: center;
+}
+
+
+/* ======================== End Site Title ===========================*/
+
+
+/* ======================== End Main Content ===========================*/
 
 
 /* ========== Start Viewport less than or equal to 750px ========== */
