--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @import url('../css/fonts.css');
 html,
 body {
-    margin: 0;
+    margin: 0%;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 :root {
@@ -13,7 +13,8 @@ body {
     --stil-grain: #F5CB5C;
     --raisin-black: #242423;
     --jet: #333533;
-    --gradient-color: linear-gradient(to right, #d7d2cc 0%, rgb(39, 95, 76) 100%);
+    --gradient-color1: linear-gradient(to right, #d7d2cc 0%, rgb(39, 95, 76) 100%);
+    --gradient-color2: linear-gradient(to right, #2DA4BE 0%, #B661FD 100%);
     /* Fonts */
     --Abel: 'Abel', cursive;
     --Anton: 'Anton', cursive;
@@ -64,6 +65,15 @@ button.btn {
     cursor: pointer;
     font-size: 1rem;
     font-family: var(--OpenSans);
+    cursor: pointer;
+}
+
+span {
+    font-family: var(--K2D);
+}
+
+.container {
+    margin: 0 5vw;
 }
 
 
@@ -75,7 +85,7 @@ button.btn {
 .nav {
     background: white;
     padding: 0 2rem;
-    height: 0;
+    height: 0rem;
     min-height: 7vh;
     overflow: hidden;
     transition: height .4s ease-in-out;
@@ -87,7 +97,7 @@ button.btn {
 
 .nav .toggle-collapse {
     position: absolute;
-    top: 0;
+    top: 0%;
     width: 90%;
     cursor: pointer;
     display: none;
@@ -104,13 +114,13 @@ button.btn {
     color: var(--jet);
 }
 
-.nav .nav-items {
-    display: flex;
-    margin: auto;
+.collapse {
+    height: 30rem;
 }
 
-.collapse {
-    height: 31rem;
+.nav .nav-items {
+    display: flex;
+    margin: 0;
 }
 
 .nav .nav-items .nav-link {
@@ -143,7 +153,6 @@ button.btn {
 
 .nav .social i {
     padding: 0 .2rem;
-    transition: color .2s ease;
 }
 
 .nav .social i:hover {
@@ -155,6 +164,17 @@ button.btn {
 
 
 /* ======================== Main Content ===========================*/
+
+
+/* ======================== Site Title ===========================*/
+
+main .site-title {
+    background: url(../assets/Background-image.png);
+    background-size: cover;
+    height: 110vh;
+    display: flex;
+    justify-content: center;
+}
 
 main .site-title .site-background {
     padding-top: 10rem;
@@ -169,7 +189,7 @@ h3 {
 
 main .site-title .btn {
     margin: 1.8rem;
-    background: var(--gradient-color);
+    background: var(--gradient-color1);
 }
 
 main .site-title .btn:hover {
@@ -179,18 +199,72 @@ main .site-title .btn:hover {
 }
 
 
-/* ======================== Site Title ===========================*/
+/* ======================== End Site Title ===========================*/
 
-main .site-title {
-    background: url(../assets/Background-image.png);
-    background-size: cover;
-    height: 110vh;
+
+/* ======================== Start Blog Carousel ===========================*/
+
+main .blog {
+    background: url(../assets/Abract01.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 100vh;
+    width: 100%;
+    background-size: 65%;
+}
+
+main .blog .blog-post {
+    padding-top: 6rem;
+}
+
+main .blog-post .blog-content {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+    margin: 3rem 2rem;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+
+main .blog-content .blog-title {
+    padding: 2rem 0;
+}
+
+main .blog-content .btn-blog {
+    padding: .7rem 2rem;
+    background: var(--gradient-color2);
+    margin: .5rem;
+}
+
+main .blog-content span {
+    display: block;
+}
+
+section .container .owl-nav {
+    position: absolute;
+    top: 0;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.owl-nav .owl-prev .owl-nav-prev,
+.owl-nav .owl-next .owl-nav-next {
+    color: var(--raisin-black);
+    background: transparent;
+    font-size: 2rem;
+}
+
+.owl-theme .owl-nav [class*='owl-']:hover {
+    background: transparent;
+    color: var(--jet);
+}
+
+.owl-theme .owl-nav [class*='owl-']:hover {
+    outline: none;
 }
 
 
-/* ======================== End Site Title ===========================*/
+/* ======================== End Blog Carousel ===========================*/
 
 
 /* ======================== End Main Content ===========================*/
