--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ a {
     color: var(--jet);
 }
 
+li a {
+    display: block;
+}
+
 .flex-row {
     display: flex;
     flex-direction: row;
@@ -180,7 +184,6 @@ p {
     font-size: 1.1rem;
     position: relative;
     font-family: var(--Abel);
-    font-size: 1.1rem;
 }
 
 .nav .nav-items .nav-link:hover {
@@ -260,7 +263,7 @@ main .blog {
     background: url(../assets/Abract01.png);
     background-repeat: no-repeat;
     background-position: right;
-    height: 100vh;
+    height: 70rem;
     width: 101%;
     background-size: 65%;
 }
@@ -325,6 +328,7 @@ section .container .owl-nav {
 main .site-content {
     display: grid;
     grid-template-columns: 70% 30%;
+    margin-top: -10rem;
 }
 
 main .post-content {
