--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,30 @@ main .post-content .post-title a {
 /* ========================= End Site Content ========================== */
 
 
+/* ===================== Sidebar ========================= */
+
+.site-content>.sidebar .category-list {
+    font-family: var(--OpenSans);
+}
+
+.site-content>.sidebar .category-list .list-items {
+    background: var(--gradient-color2);
+    padding: .4rem 1rem;
+    margin: .8rem 0;
+    border-radius: 3rem;
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.site-content>.sidebar .category-list .list-items a {
+    color: black;
+}
+
+
+/* ===================== End Sidebar ========================= */
+
+
 /* ======================== End Main Content ===========================*/
 
 
