Newsletter form added

--- a/css/style.css
+++ b/css/style.css
@@ -440,6 +440,29 @@ main .post-content .post-title a {
     font-size: 1rem;
 }
 
+.site-content .sidebar .newsletter {
+    padding-top: 3rem;
+}
+
+.site-content .sidebar .newsletter .form-element {
+    padding: .5rem .2rem;
+}
+
+.site-content .sidebar .newsletter .input-element {
+    width: 80%;
+    height: 1.9rem;
+    padding: .3rem .5rem;
+    font-family: var(--K2D);
+    font-size: 1rem;
+}
+
+.site-content .sidebar .newsletter .form-btn {
+    border-radius: 0;
+    padding: .8rem 32%;
+    margin: 1rem 0;
+    background: var(--gradient-color2);
+}
+
 
 /* ===================== End Sidebar ========================= */
 
