Popular tags added

--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ main .post-content .post-title a {
 }
 
 .site-content .sidebar .newsletter {
-    padding-top: 3rem;
+    padding-top: 10rem;
 }
 
 .site-content .sidebar .newsletter .form-element {
@@ -461,6 +461,17 @@ main .post-content .post-title a {
     padding: .8rem 32%;
     margin: 1rem 0;
     background: var(--gradient-color2);
+}
+
+.site-content .sidebar .popular-tags {
+    padding: 5rem 0;
+}
+
+.site-content .sidebar .popular-tags .tags .tag {
+    background: var(--gradient-color1);
+    padding: .4rem 1rem;
+    border-radius: 3rem;
+    margin: .4rem 6rem;
 }
 
 
