--- a/css/style.css
+++ b/css/style.css
@@ -471,7 +471,7 @@ main .post-content .post-title a {
     background: var(--gradient-color1);
     padding: .4rem 1rem;
     border-radius: 3rem;
-    margin: .4rem 6rem;
+    margin: .4rem .6rem;
 }
 
 
