About us section completed

--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,33 @@ main .post-content .post-title a {
 /* ======================== End Main Content ===========================*/
 
 
+/* ============================Start Footer ======================== */
+
+footer.footer {
+    height: 100%;
+    background-color: var(--raisin-black);
+    position: relative;
+}
+
+footer.footer .container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+footer.footer .container>div {
+    flex-grow: 1;
+    flex-basis: 1;
+    padding: 3rem .9rem;
+}
+
+footer.footer .container .about-us h2 {
+    color: var(--light-gray);
+}
+
+
+/* ============================ End Footer ======================== */
+
+
 /* ========== Start Viewport less than or equal to 750px ========== */
 
 @media only screen and (max-width: 750px) {
